# Disker

./: .gitignore  Makefile  README.md  grapher.py  install.sh  main.py  pyproject.toml
doc/report_01kugenuma/: report.md
doc/report_01kugenuma26/: report.md
doc/report_02kugenuma29/: report.md
doc/report_03kugenuma29/: report.md
doc/report_04kugenuma29/: report.md
doc/report_05rnd_by_bsize_anomaly/: report.md
doc/report_06malloc_posixmemalign_check/: report.md
doc/report_07rnd_mthreads_bug_fixed/: report.md
mylib/: envinfo.sh  grapher.py
src/: addresser.c  bsizer.c  mylib.c  mylib.h  randomer.c
