[tool.poetry]
name = "disker"
version = "0.1.0"
description = "high functional Microbenchmark tool for disks"
authors = ["monado3 <monade.kk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
matplotlib = "^3.3.0"
japanize-matplotlib = "^1.1.2"
seaborn = "^0.10.1"
dask = "^2.22.0"
humanize = "^2.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
jupyterlab = "^2.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
